--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
 #          build: npm run build
 #          start: npm start
       - name: 'Sending SMS Notification'
+        if: failure()
         uses: twilio-labs/actions-sms@v1
         with:
           fromPhoneNumber: '+447897036610'
